--- a/cadastro.html
+++ b/cadastro.html
@@ -4,36 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Resgate a Fauna</title>
-    <style>
-.container {
-  display: flex;
-}
-
-.image-container {
-  flex: 40%;
-  display: flex;
-}
-
-.content {
-  flex: 30%;
-  display: flex;
-  margin: 12px;
-  padding: 20px;
-  flex-direction: column;
-  flex-wrap: wrap;
-
-}
-.item{
-  display: flex;
-  flex-wrap: nowrap;
-  margin: 20px;
-  
-		}
-	</style>
+    <link rel="stylesheet" href="./style_cad.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
+  <div class="box1"><h1>Cadastro <i class="fa-solid fa-file" style="color: #1c8a26;"></i></h1></div> 
     <section class="container">
-      <h1>Cadastro</h1>     
+          
           <form class="item">
             <div class="content">
             <label for="firstname">Nome</label><br>
@@ -56,7 +33,7 @@
             <input type="password" id="confirmpassword" name="confirmpassword" required><br>
             <br> <!--quebra de linha-->
             <br>
-            <input type="submit" value="Enviar" class="item">
+            <input type="submit" value="Cadastrar" class="item2">
             </form>
 
           </div>
