--- a/cadastro.html
+++ b/cadastro.html
@@ -6,12 +6,13 @@
     <title>Cadastro - Resgate a Fauna</title>
     <link rel="stylesheet" href="./style_cad.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Kreon" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Kreon' rel='stylesheet'>
 </head>
 <body>
-  <div class="box1"><h1>Cadastro <i class="fa-solid fa-file" style="color: #1c8a26;"></i></h1></div> 
-    <section class="container">
-          
+  <section class="container">
+
+    <div class="form-container">
+  <h1>Cadastro <i class="fa-solid fa-file" style="color: #1c8a26;"></i></h1>    
           <form class="item">
             <div class="content">
             <label for="firstname">Nome</label><br>
@@ -38,7 +39,7 @@
             </form>
 
           </div>
-     
+          </div>
           <div class="image-container">
             <img src="/images/golfinhos_1.png" alt="Golfinho" style="width:45vw;height: 100vh;background-size: contain;     border-radius: 20px;">
         </div>
