--- a/login.html
+++ b/login.html
@@ -70,16 +70,16 @@
   <form >
     <div class="email">
       <i class="fa-solid fa-envelope"></i>
-      <input type="email" id="email" name="email"><br>
+      <input type="email" id="email" name="email" required><br>
     </div>
     <div class="password">
       <i class="fa-solid fa-lock"></i>
-      <input type="password" id="password" name="pasword"><br>
+      <input type="password" id="password" name="pasword" required><br>
     </div>
 
     <div class="botton">
-      <a class="enter" href="">Entrar</a>
-      <a class="cadastrar" href="">Cadastrar-se</a>
+      <input class="enter"type="submit" value="Entrar">
+      <a class="cadastrar" href="./cadastro.html">Cadastrar-se</a>
     </div>
 
   </div>
