--- a/cadastro.html
+++ b/cadastro.html
@@ -6,7 +6,7 @@
     <title>Cadastro - Resgate a Fauna</title>
     <link rel="stylesheet" href="./style_cad.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Kreon' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css2?family=Kreon:wght@300..700&display=swap' rel='stylesheet'>
 </head>
 <body>
   <section class="container">
@@ -35,7 +35,7 @@
             <input type="password" id="confirmpassword" name="confirmpassword" required><br>
             <br> 
             <br>
-            <input type="submit" value="Cadastrar" class="item2">
+              <input type="submit" value="Cadastrar" class="item2" href="/login.html">
             </form>
 
           </div>
