--- a/cadastro.html
+++ b/cadastro.html
@@ -40,9 +40,9 @@
 
           </div>
           </div>
-          <div class="image-container">
-            <img src="images/golfinhos_1.png" alt="Golfinho" style="width:45vw;height: 100vh;background-size: contain;     border-radius: 20px;">
-          </div>
+          <image class="image-container">
+            <img src="/images/golfinhos_1.png" alt="Golfinho" style="width:45vw;height: 100vh;background-size: contain;     border-radius: 20px;">
+          </image>
           
     </section>
     
