--- a/cadastro.html
+++ b/cadastro.html
@@ -13,8 +13,8 @@
 
     <div class="form-container">
   <h1>Cadastro <i class="fa-solid fa-file" style="color: #1c8a26;"></i></h1>    
-          <form class="item">
-            <div class="content">
+          <form class="item" action="login.html">
+            <div class="content1">
             <label for="firstname">Nome</label><br>
             <input type="text" id="firstname" name="firstname" required><br>
             <label for="state">Estado</label><br>
@@ -24,7 +24,7 @@
             <label for="password">Senha</label><br>
             <input type="password" id="password" name="password" required><br>
           </div>
-          <div class="content">
+          <div class="content2">
             <label for="lastname">Sobrenome</label><br>
             <input type="text" id="lastname" name="lastname" required><br>
             <label for="city">Cidade</label><br>
@@ -35,14 +35,17 @@
             <input type="password" id="confirmpassword" name="confirmpassword" required><br>
             <br> 
             <br>
+            <div class="but-cad">
               <input type="submit" value="Cadastrar" class="item2" href="/login.html">
+            </div>
+
             </form>
 
           </div>
           </div>
-          <image class="image-container">
-            <img src="/images/golfinhos_1.png" alt="Golfinho" style="width:45vw;height: 100vh;background-size: contain;     border-radius: 20px;">
-          </image>
+          <div class="image-container">
+            <img src="assets/img/golfinhos_1.jpg" alt="Golfinho" style="width:45vw;height: 100vh;background-size: contain;     border-radius: 20px;">
+          </div>
           
     </section>
     
