--- a/cadastro.html
+++ b/cadastro.html
@@ -17,20 +17,20 @@
             <div class="content1">
             <label for="firstname">Nome</label><br>
             <input type="text" id="firstname" name="firstname" required><br>
-            <label for="state">Estado</label><br>
-            <input type="text" id="state" name="state" required>
-            <label for="birthdate">Data de Nascimento</label><br>
-            <input type="date" id="birthdate" name="birthdate" required>
-            <label for="password">Senha</label><br>
-            <input type="password" id="password" name="password" required><br>
-          </div>
-          <div class="content2">
             <label for="lastname">Sobrenome</label><br>
             <input type="text" id="lastname" name="lastname" required><br>
-            <label for="city">Cidade</label><br>
-            <input type="text" id="city" name="city" required>
+            <label for="birthdate">Data de Nascimento</label><br>
+            <input type="date" id="birthdate" name="birthdate" required><br>
             <label for="email">E-mail</label><br>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" required><br>
+          </div>
+          <div class="content2">
+            <label for="state">Estado</label><br>
+            <input type="text" id="state" name="state" required><br>
+            <label for="city">Cidade</label><br>
+            <input type="text" id="city" name="city" required><br>
+            <label for="password">Senha</label><br>
+            <input type="password" id="password" name="password" required><br>
             <label for="confirmpassword">Confirmar Senha</label><br>
             <input type="password" id="confirmpassword" name="confirmpassword" required><br>
             <br> 
