--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -16,43 +17,34 @@
       <img src="./assets/img/logo.png" alt="logo" />
       <a href="">Home</a>
       <a href="">Quem somos?</a>
-      <div>
-        <a href="">ONG'S</a>
-        <button onclick="">
-          <i class="fa-solid fa-angle-down" style="color: white"></i>
-        </button>
-      </div>
-        
-        <div class="menu">
+
+      <nav>
         <ul>
-          <a href="">
-            <li>
-              <p>Projeto Tamar</p>
-            </li>
-          </a>
-          <a href="">
-            <li>
-              <p>SOS Fauna</p>
-            </li>
-          </a>
-          <a href="">
-            <li>
-              <p>SUIPA</p>
-            </li>
-          </a>
-          <a href="">
-            <li>
-              <p>Instituto Caramelo</p>
-            </li>
-          </a>
-          <a href="">
-            <li>
-              <p>Fundação Mamíferos Aquáticos</p>
-            </li>
-          </a>
+          <li>
+            <a href="">ONG'S <i class="fa-solid fa-angle-down"></i></a>
+            <ul>
+              <li>
+                <a href="#texto_Projeto-Tamar">Projeto Tamar</a>
+              </li>
+              <li>
+                <a href="#texto_SOS-Fauna">SOS Fauna</a>
+              </li>
+              <li>
+                <a href="#texto_SUIPA">SUIPA</a>
+              </li>
+              <li>
+                <a href="#texto_Instituto-Caramelo">Instituto Caramelo</a>
+              </li>
+              <li>
+                <a href="#texto_FMA">Fundação Mamíferos Aquáticos</a>
+              </li>
+            </ul>
+          </li>
         </ul>
-      </div>
+      </nav>
+      
     </div>
+
     <div class="click">
       <a href="">Log in</a>
       <div></div>
@@ -63,6 +55,10 @@
   <body>
 
     <section class="texto_pagina_home">
+      <br>
+      <br>
+      <br>
+      <br>
       <h1>O RESGATE DE CADA ESPÉCIE CONTA!</h1>
       <figure>
         <img
@@ -76,6 +72,10 @@
           "
         />
       </figure>
+      <br>
+      <br>
+      <br>
+      <br>
   
       <h2>Quem Somos?</h2>
       <p>
@@ -95,6 +95,10 @@
       </p>
     </section>
     <section class="texto_ONG">
+      <br>
+      <br>
+      <br>
+      <br>
       <h2>A IMPORTÂNCIA DAS ONGs</h2>
 
       <p>
@@ -122,8 +126,12 @@
       </p>
     </section>
 
-    <section class="texto_Projeto-Tamar">
-      <h2>Projeto Tamar </h2>
+    <section id="texto_Projeto-Tamar">
+      <br>
+      <br>
+      <br>
+      <br>
+      <h2>Projeto Tamar</h2>
       <figure>
         <img
           src="./assets/img/protecaoAnimal.png"
@@ -160,7 +168,11 @@
       </p>
     </section>
 
-    <section class="texto_SOS-Fauna">
+    <section id="texto_SOS-Fauna">
+      <br>
+      <br>
+      <br>
+      <br>
       <h2>SOS Fauna</h2>
       <figure>
         <img
@@ -187,7 +199,11 @@
       </p>
     </section>
 
-    <section class="texto_SUIPA">
+    <section id="texto_SUIPA">
+      <br>
+      <br>
+      <br>
+      <br>
       <h2>SUIPA</h2>
       <figure>
         <img
@@ -216,7 +232,11 @@
       </p>
     </section>
 
-    <section class="texto_Instituto-Caramelo">
+    <section id="texto_Instituto-Caramelo">
+      <br>
+      <br>
+      <br>
+      <br>
       <h2>Instituto Caramelo</h2>
       <figure>
         <img
@@ -245,7 +265,11 @@
       </p>
     </section>
 
-    <section class="texto_FMA">
+    <section id="texto_FMA">
+      <br>
+      <br>
+      <br>
+      <br>
       <h2>Fundação Mamíferos Aquáticos</h2>
       <figure>
         <img
