--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
   <header>
     <div class="information">
       <img src="./assets/img/logo.png" alt="logo" />
-      <a href="">Home</a>
-      <a href="">Quem somos?</a>
+      <a href="#texto_pagina_home">Home</a>
+      <a href="#quem-somos">Quem somos?</a>
 
       <nav>
         <ul>
@@ -53,8 +53,9 @@
   </header>
   
   <body>
-
-    <section class="texto_pagina_home">
+    <div class="pghome">
+    <main>
+    <section id="texto_pagina_home">
       <br>
       <br>
       <br>
@@ -62,21 +63,22 @@
       <h1>O RESGATE DE CADA ESPÉCIE CONTA!</h1>
       <figure>
         <img
-          src="./assets/img/protecaoAnimal.png"
+          src="./assets/img/protecaoAnimal.webp"
           alt="Equipe protecao animais-1"
           style="
-            width: 45vw;
-            height: 100vh;
+            width: 70vw;
+            height: 80vh;
             background-size: contain;
             border-radius: 20px;
           "
         />
+        <figcaption>Colaboradora de ONG ajudando animais.</figcaption>
       </figure>
+      <div id="quem-somos">
       <br>
       <br>
       <br>
       <br>
-  
       <h2>Quem Somos?</h2>
       <p>
         O "Resgate a Fauna" é uma plataforma dedicada a ajudar e proteger a vida
@@ -93,6 +95,7 @@
         seres vivos. Juntos, podemos fazer a diferença e deixar um legado
         positivo para as próximas gerações.
       </p>
+    </div>
     </section>
     <section class="texto_ONG">
       <br>
@@ -134,15 +137,16 @@
       <h2>Projeto Tamar</h2>
       <figure>
         <img
-          src="./assets/img/protecaoAnimal.png"
-          alt="Equipe protecao animais-1"
+          src="assets/img/pjtamr.jpg"
+          alt="Colaboradores Projeto Tamar"
           style="
-            width: 45vw;
-            height: 100vh;
+            width: 70vw;
+            height: 80vh;
             background-size: contain;
             border-radius: 20px;
           "
         />
+        <figcaption>Colaboradores do Projeto Tamar ajudando tartarugas.</figcaption>
       </figure>
 
       <p>
@@ -176,15 +180,16 @@
       <h2>SOS Fauna</h2>
       <figure>
         <img
-          src="./assets/img/protecaoAnimal.png"
-          alt="Equipe protecao animais-1"
+          src="./assets/img/sosfauna.jpg"
+          alt="Arara Canindé"
           style="
-            width: 45vw;
-            height: 100vh;
+            width: 70vw;
+            height: 80vh;
             background-size: contain;
             border-radius: 20px;
           "
         />
+        <figcaption>Arara Canindé</figcaption>
       </figure>
 
       <p>
@@ -207,15 +212,16 @@
       <h2>SUIPA</h2>
       <figure>
         <img
-          src="./assets/img/protecaoAnimal.png"
-          alt="Equipe protecao animais-1"
+          src="./assets/img/logosuipa.png"
+          alt="Logo SUIPA"
           style="
-            width: 45vw;
-            height: 100vh;
+            width: 70vw;
+            height: 80vh;
             background-size: contain;
             border-radius: 20px;
           "
         />
+        <figcaption>Logo SUIPA</figcaption>
       </figure>
 
       <p>
@@ -240,15 +246,16 @@
       <h2>Instituto Caramelo</h2>
       <figure>
         <img
-          src="./assets/img/protecaoAnimal.png"
-          alt="Equipe protecao animais-1"
+          src="./assets/img/instituocarame.jpg"
+          alt="Logo Instituto Caramelo"
           style="
-            width: 45vw;
-            height: 100vh;
+            width: 70vw;
+            height: 80vh;
             background-size: contain;
             border-radius: 20px;
           "
         />
+        <figcaption>Logo Instituto Caramelo</figcaption>
       </figure>
 
       <p>
@@ -273,15 +280,16 @@
       <h2>Fundação Mamíferos Aquáticos</h2>
       <figure>
         <img
-          src="./assets/img/protecaoAnimal.png"
-          alt="Equipe protecao animais-1"
+          src="./assets/img/fundao_mamfero.jpg"
+          alt="Colaboradores Fundação Mamíferos Aquáticos"
           style="
-            width: 45vw;
-            height: 100vh;
+            width: 70vw;
+            height: 80vh;
             background-size: contain;
             border-radius: 20px;
           "
         />
+        <figcaption>Colaboradores da FMA ajudando um peixe-boi.</figcaption>
       </figure>
 
       <p>
@@ -298,12 +306,13 @@
         e sustentabilidade.
       </p>
     </section>
-  </div>
+  </main>
 
+    <nav class="denuncia-doacao border left">
     <section class="denuncia">
-      <h2>Faça uma Denuncia:</h2>
+      <h2 class="tit-2">Faça uma Denuncia:</h2>
 
-      <form class="form-denuncia">
+      <form class="form-denuncia" action="">
         <select name="ong" required="required">
           <option value="" disabled selected>Selecione uma ONG</option>
           <option value="Projeto Tamar">Projeto Tamar</option>
@@ -342,6 +351,7 @@
         /><br />
         <input
           type="text"
+          id="date"
           placeholder="Selecione a data do ocorrido"
           onfocus="this.type='date'"
           onblur="if (!this.value) this.type='text'"
@@ -354,15 +364,15 @@
     </section>
 
     <section class="doacao">
-      <h2>Faça uma Doação:</h2>
-      <a class="but-doacao" href="">Projeto Tamar<br /></a>
-      <a class="but-doacao" href="">SOS Fauna<br /></a>
-      <a class="but-doacao" href="">SUIPA<br /></a>
-      <a class="but-doacao" href="">Instituto Caramelo<br /></a>
-      <a class="but-doacao" href="">Fundação Mamíferos Marinhos<br /></a>
+      <h2 class="tit-2">Faça uma Doação:</h2>
+      <a class="but-doacao" href="https://www.tamar.org.br" target="_blank">Projeto Tamar<br /></a>
+      <a class="but-doacao" href="https://sosfauna.org.br" target="_blank">SOS Fauna<br /></a>
+      <a class="but-doacao" href="https://www.suipa.org.br" target="_blank">SUIPA<br /></a>
+      <a class="but-doacao" href="https://institutocaramelo.org/home" target="_blank">Instituto Caramelo<br /></a>
+      <a class="but-doacao" href="https://mamiferosaquaticos.org.br" target="_blank">Fundação Mamíferos Marinhos<br /></a>
     </section>
-
-  
+  </nav>
+</div>
   </body>
 
   <footer>
