--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <h1>Log in</h1>
 
 
-  <form >
+  <form  action="home.html">
     <div class="email">
       <i class="fa-solid fa-envelope"></i>
       <input type="email" id="email" name="email" required><br>
@@ -82,6 +82,7 @@
       <a class="cadastrar" href="./cadastro.html">Cadastrar-se</a>
     </div>
 
+  </form>
   </div>
 
   </div>
