--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,7 @@
 
     <div class="form-container">
   <h1>Cadastro <i class="fa-solid fa-file" style="color: #1c8a26;"></i></h1>    
-          <form class="item" action="login.html">
+          <form class="item" action="index.html">
             <div class="content1">
             <label for="firstname">Nome</label><br>
             <input type="text" id="firstname" name="firstname" required><br>
