--- a/home.html
+++ b/home.html
@@ -46,9 +46,9 @@
     </div>
 
     <div class="click">
-      <a href="">Log in</a>
+      <a href="https://hallanmelo22.github.io/Projeto-Front-End-Resgate-a-Fauna/">Log in</a>
       <div></div>
-      <a href="">Cadastrar-se</a>
+      <a href="https://hallanmelo22.github.io/Projeto-Front-End-Resgate-a-Fauna/cadastro.html">Cadastrar-se</a>
     </div>
   </header>
   
