--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
     <!-- div: imagens rolantes -->
     <div class="slide first">
-      <img src="/assets/img/Big_cats_Jaguars_Lying_down_Glance_576672_1280x853.jpg" alt=""> 
+      <img src="/assets/img/Big_cats_Jaguars_Lying_down_Glance_576672_1280x853.jpg" alt="Jaguars"> 
     </div>
     <div class="slide">
-      <img src="/assets/img/tartaruga.jpg" alt=""> 
+      <img src="/assets/img/tartaruga.jpg" alt="Tartarugas"> 
     </div>
     <div class="slide">
-      <img src="/assets/img/tucano.jpeg" alt=""> 
+      <img src="/assets/img/tucano.jpeg" alt="Tucano"> 
     </div>
     <div class="slide">
-      <img src="/assets/img/agua_viva.jpg" alt=""> 
+      <img src="/assets/img/agua_viva.jpg" alt="Água Viva"> 
     </div>
     <div class="slide">
-      <img src="/assets/img/araras.jpg" alt=""> 
+      <img src="/assets/img/araras.jpg" alt="Arara"> 
     </div>
     <!-- div: fim da imagens rolantes -->
 
