--- a/home.html
+++ b/home.html
@@ -46,9 +46,9 @@
     </div>
 
     <div class="click">
-      <a href="https://hallanmelo22.github.io/Projeto-Front-End-Resgate-a-Fauna/">Log in</a>
+      <a href="./login.html">Log in</a>
       <div></div>
-      <a href="https://hallanmelo22.github.io/Projeto-Front-End-Resgate-a-Fauna/cadastro.html">Cadastrar-se</a>
+      <a href="./cadastro.html">Cadastrar-se</a>
     </div>
   </header>
   
@@ -75,6 +75,7 @@
         <figcaption>Colaboradora de ONG ajudando animais.</figcaption>
       </figure>
       <div id="quem-somos">
+      <br>
       <br>
       <br>
       <br>
@@ -134,6 +135,7 @@
       <br>
       <br>
       <br>
+      <br>
       <h2>Projeto Tamar</h2>
       <figure>
         <img
@@ -177,6 +179,7 @@
       <br>
       <br>
       <br>
+      <br>
       <h2>SOS Fauna</h2>
       <figure>
         <img
@@ -205,6 +208,7 @@
     </section>
 
     <section id="texto_SUIPA">
+      <br>
       <br>
       <br>
       <br>
@@ -243,6 +247,7 @@
       <br>
       <br>
       <br>
+      <br>
       <h2>Instituto Caramelo</h2>
       <figure>
         <img
@@ -273,6 +278,7 @@
     </section>
 
     <section id="texto_FMA">
+      <br>
       <br>
       <br>
       <br>
@@ -308,7 +314,7 @@
     </section>
   </main>
 
-    <nav class="denuncia-doacao border left">
+    <nav class="denuncia-doacao">
     <section class="denuncia">
       <h2 class="tit-2">Faça uma Denuncia:</h2>
 
