--- a/cadastro.html
+++ b/cadastro.html
@@ -12,37 +12,35 @@
   <main class="container">
 
     <div class="form-container">
-  <h1>Cadastro <i class="fa-solid fa-file" style="color: #1c8a26;"></i></h1>    
-          <form class="item" action="https://hallanmelo22.github.io/Projeto-Front-End-Resgate-a-Fauna/">
+      <h1>Cadastro <i class="fa-solid fa-file" style="color: #1c8a26;"></i></h1>    
+          <form class="item" method="get" action="./login.html">
             <div class="content1">
-            <label for="firstname">Nome</label><br>
-            <input type="text" id="firstname" name="firstname" required><br>
-            <label for="lastname">Sobrenome</label><br>
-            <input type="text" id="lastname" name="lastname" required><br>
-            <label for="birthdate">Data de Nascimento</label><br>
-            <input type="date" id="birthdate" name="birthdate" required><br>
-            <label for="email">E-mail</label><br>
-            <input type="email" id="email" name="email" required><br>
-          </div>
-          <div class="content2">
-            <label for="state">Estado</label><br>
-            <input type="text" id="state" name="state" required><br>
-            <label for="city">Cidade</label><br>
-            <input type="text" id="city" name="city" required><br>
-            <label for="password">Senha</label><br>
-            <input type="password" id="password" name="password" required><br>
-            <label for="confirmpassword">Confirmar Senha</label><br>
-            <input type="password" id="confirmpassword" name="confirmpassword" required><br>
-            <br> 
-            <br>
-            <div class="but-cad">
-              <input type="submit" value="Cadastrar" class="item2" href="/login.html">
+              <label for="firstname">Nome</label><br>
+              <input type="text" id="firstname" name="firstname" required><br>
+              <label for="lastname">Sobrenome</label><br>
+              <input type="text" id="lastname" name="lastname" required><br>
+              <label for="birthdate">Data de Nascimento</label><br>
+              <input type="date" id="birthdate" name="birthdate" required><br>
+              <label for="email">E-mail</label><br>
+              <input type="email" id="email" name="email" required><br>
+              </div>
+            <div class="content2">
+              <label for="state">Estado</label><br>
+              <input type="text" id="state" name="state" required><br>
+              <label for="city">Cidade</label><br>
+              <input type="text" id="city" name="city" required><br>
+              <label for="password">Senha</label><br>
+              <input type="password" id="password" name="password" required><br>
+              <label for="confirmpassword">Confirmar Senha</label><br>
+              <input type="password" id="confirmpassword" name="confirmpassword" required><br>
+              <br> 
+                <div class="but-cad">
+                  <input type="submit" value="Cadastrar" class="item2" href="/login.html">
+                </div>
             </div>
 
-            </form>
+    </div>
 
-          </div>
-          </div>
           <figure class="image-container">
             <img src="assets/img/golfinhos_1.jpg" alt="Golfinho" style="width:45vw;height: 100vh;background-size: contain;     border-radius: 20px;">
           </figure>
