--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-  <div class="grid">
+  <main class="grid">
 
-  <div class="slider">
+  <nav class="slider">
 
     <div class="slides">
       <!-- div: botão radio -->
@@ -25,7 +25,7 @@
 
     <!-- div: imagens rolantes -->
     <div class="slide first">
-      <img src="/assets/img/Big_cats_Jaguars_Lying_down_Glance_576672_1280x853.jpg" alt="Jaguars"> 
+      <img src="./assets/img/Big_cats_Jaguars_Lying_down_Glance_576672_1280x853.jpg" alt="Jaguars"> 
     </div>
     <div class="slide">
       <img src="/assets/img/tartaruga.jpg" alt="Tartarugas"> 
@@ -61,13 +61,11 @@
     <label for="radio5" class="manual-btn"></label>
   </div>
 
-  </div>
+</nav>
 
-  <div class="login">
+  <section class="login">
   <h1>Log in</h1>
-
-
-  <form  action="home.html">
+  <form method="get" action="./home.html">
     <div class="email">
       <i class="fa-solid fa-envelope"></i>
       <input type="email" id="email" name="email" required><br>
@@ -83,9 +81,10 @@
     </div>
 
   </form>
-  </div>
 
-  </div>
+  </section>
+
+  </main>
 
   <script src="script.js"></script>
 </body>
