--- a/login.html
+++ b/login.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-  <main class="grid">
+  <div class="grid">
 
-  <nav class="slider">
+  <div class="slider">
 
     <div class="slides">
       <!-- div: botão radio -->
@@ -25,19 +25,19 @@
 
     <!-- div: imagens rolantes -->
     <div class="slide first">
-      <img src="./assets/img/Big_cats_Jaguars_Lying_down_Glance_576672_1280x853.jpg" alt="Jaguars"> 
+      <img src="../assets/img/Big_cats_Jaguars_Lying_down_Glance_576672_1280x853.jpg" alt=""> 
     </div>
     <div class="slide">
-      <img src="/assets/img/tartaruga.jpg" alt="Tartarugas"> 
+      <img src="../assets/img/tartaruga.jpg" alt=""> 
     </div>
     <div class="slide">
-      <img src="/assets/img/tucano.jpeg" alt="Tucano"> 
+      <img src="../assets/img/tucano.jpeg" alt=""> 
     </div>
     <div class="slide">
-      <img src="/assets/img/agua_viva.jpg" alt="Água Viva"> 
+      <img src="../assets/img/agua_viva.jpg" alt=""> 
     </div>
     <div class="slide">
-      <img src="/assets/img/araras.jpg" alt="Arara"> 
+      <img src="../assets/img/araras.jpg" alt=""> 
     </div>
     <!-- div: fim da imagens rolantes -->
 
@@ -61,9 +61,9 @@
     <label for="radio5" class="manual-btn"></label>
   </div>
 
-</nav>
+  </div>
 
-  <section class="login">
+  <div class="login">
   <h1>Log in</h1>
   <form method="get" action="./home.html">
     <div class="email">
@@ -80,11 +80,9 @@
       <a class="cadastrar" href="./cadastro.html">Cadastrar-se</a>
     </div>
 
-  </form>
+  </div>
 
-  </section>
-
-  </main>
+  </div>
 
   <script src="script.js"></script>
 </body>
