--- a/login.html
+++ b/login.html
@@ -25,19 +25,19 @@
 
     <!-- div: imagens rolantes -->
     <div class="slide first">
-      <img src="../assets/img/Big_cats_Jaguars_Lying_down_Glance_576672_1280x853.jpg" alt=""> 
+      <img src="./assets/img/Big_cats_Jaguars_Lying_down_Glance_576672_1280x853.jpg" alt=""> 
     </div>
     <div class="slide">
-      <img src="../assets/img/tartaruga.jpg" alt=""> 
+      <img src="./assets/img/tartaruga.jpg" alt=""> 
     </div>
     <div class="slide">
-      <img src="../assets/img/tucano.jpeg" alt=""> 
+      <img src="./assets/img/tucano.jpeg" alt=""> 
     </div>
     <div class="slide">
-      <img src="../assets/img/agua_viva.jpg" alt=""> 
+      <img src="./assets/img/agua_viva.jpg" alt=""> 
     </div>
     <div class="slide">
-      <img src="../assets/img/araras.jpg" alt=""> 
+      <img src="./assets/img/araras.jpg" alt=""> 
     </div>
     <!-- div: fim da imagens rolantes -->
 
