--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,7 @@
 
     <div class="form-container">
       <h1>Cadastro <i class="fa-solid fa-file" style="color: #1c8a26;"></i></h1>    
-          <form class="item" method="get" action="./login.html">
+          <form class="item" method="get" action="./index.html">
             <div class="content1">
               <label for="firstname">Nome</label><br>
               <input type="text" id="firstname" name="firstname" required><br>
@@ -35,7 +35,7 @@
               <input type="password" id="confirmpassword" name="confirmpassword" required><br>
               <br> 
                 <div class="but-cad">
-                  <input type="submit" value="Cadastrar" class="item2" href="/login.html">
+                  <input type="submit" value="Cadastrar" class="item2" href="./index.html">
                 </div>
             </div>
 
