--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
       <img src="./assets/img/Big_cats_Jaguars_Lying_down_Glance_576672_1280x853.jpg" alt="Jaguars"> 
     </div>
     <div class="slide">
-      <img src="/assets/img/tartaruga.jpg" alt="Tartarugas"> 
+      <img src="./assets/img/tartaruga.jpg" alt="Tartarugas"> 
     </div>
     <div class="slide">
-      <img src="/assets/img/tucano.jpeg" alt="Tucano"> 
+      <img src="./assets/img/tucano.jpeg" alt="Tucano"> 
     </div>
     <div class="slide">
-      <img src="/assets/img/agua_viva.jpg" alt="Água Viva"> 
+      <img src="./assets/img/agua_viva.jpg" alt="Água Viva"> 
     </div>
     <div class="slide">
-      <img src="/assets/img/araras.jpg" alt="Arara"> 
+      <img src="./assets/img/araras.jpg" alt="Arara"> 
     </div>
     <!-- div: fim da imagens rolantes -->
 
