--- a/cadastro.html
+++ b/cadastro.html
@@ -11,7 +11,7 @@
 <body>
   <main class="container">
 
-    <div class="form-container">
+    <section class="form-container">
       <h1>Cadastro <i class="fa-solid fa-file" style="color: #1c8a26;"></i></h1>    
           <form class="item" method="get" action="./index.html">
             <div class="content1">
@@ -35,11 +35,12 @@
               <input type="password" id="confirmpassword" name="confirmpassword" required><br>
               <br> 
                 <div class="but-cad">
-                  <input type="submit" value="Cadastrar" class="item2" href="./index.html">
+                  <input type="submit" value="Cadastrar" class="item2">
                 </div>
             </div>
+          </form>
 
-    </div>
+          </section>
 
           <figure class="image-container">
             <img src="assets/img/golfinhos_1.jpg" alt="Golfinho" style="width:45vw;height: 100vh;background-size: contain;     border-radius: 20px;">
