--- a/cadastro.html
+++ b/cadastro.html
@@ -43,7 +43,7 @@
           </section>
 
           <figure class="image-container">
-            <img src="assets/img/golfinhos_1.jpg" alt="Golfinho" style="width:45vw;height: 100vh;background-size: contain;     border-radius: 20px;">
+            <img src="./assets/img/golfinhos_1.jpg" alt="Golfinho" style="width:45vw;height: 100vh;background-size: contain;     border-radius: 20px;">
           </figure>
           
         </main>
