--- a/cadastro.html
+++ b/cadastro.html
@@ -11,9 +11,9 @@
 <body>
   <main class="container">
 
-    <div class="form-container">
+    <section class="form-container">
       <h1>Cadastro <i class="fa-solid fa-file" style="color: #1c8a26;"></i></h1>    
-          <form class="item" method="get" action="./login.html">
+          <form class="item" method="get" action="./index.html">
             <div class="content1">
               <label for="firstname">Nome</label><br>
               <input type="text" id="firstname" name="firstname" required><br>
@@ -35,14 +35,15 @@
               <input type="password" id="confirmpassword" name="confirmpassword" required><br>
               <br> 
                 <div class="but-cad">
-                  <input type="submit" value="Cadastrar" class="item2" href="/login.html">
+                  <input type="submit" value="Cadastrar" class="item2">
                 </div>
             </div>
+          </form>
 
-    </div>
+          </section>
 
           <figure class="image-container">
-            <img src="assets/img/golfinhos_1.jpg" alt="Golfinho" style="width:45vw;height: 100vh;background-size: contain;     border-radius: 20px;">
+            <img src="./assets/img/golfinhos_1.jpg" alt="Golfinho" style="width:45vw;height: 100vh;background-size: contain;     border-radius: 1.25rem;">
           </figure>
           
         </main>
