feat: tela admin

--- a/home.html
+++ b/home.html
@@ -41,6 +41,11 @@
           </li>
         </ul>
       </nav>
+
+      <div class="admin">
+        <a href="./admin.html"><i class="fa-solid fa-user-tie"><p>Admin</p></i></a>
+        
+      </div>
       
     </div>
 
