botão-retornar-para-tela-home

--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,7 @@
       <div class="title">
       <h1 >ADMIN</h1>
       <i class="fa-solid fa-user-tie"></i>
+      <a href="./home.html"><i class="fa-solid fa-house" style="color: #188a1c;"></i></a>
       </div>
 
       <div class="line"></div>
