update: finalização do projeto

--- a/admin.html
+++ b/admin.html
@@ -63,7 +63,7 @@
       </div>
 
       <div class="botton_excluir">
-        <button onclick="usuario.excluirLista()">Excluir todas as listas</button>
+        <button onclick="usuario.excluirLista()">Excluir todas as linhas</button>
       </div>
 
       <div class="search_cad">
